# dotindex

./: README.md  pyproject.toml
src/DotIndex/: __init__.py
